--- a/Todolist.Tests/App.config
+++ b/Todolist.Tests/App.config
@@ -13,12 +13,9 @@
     </appSettings>
 
     <connectionStrings>
-      <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-todolist-20140719170201;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-todolist-20140719170201.mdf"
-            providerName="System.Data.SqlClient" />
-      <add name="TodolistEntities" connectionString="metadata=res://*/Models.Todolist.csdl|res://*/Models.Todolist.ssdl|res://*/Models.Todolist.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\v11.0;attachdbfilename=|DataDirectory|\todolist.mdf;integrated security=True;connect timeout=30;MultipleActiveResultSets=True;App=EntityFramework&quot;"
-        providerName="System.Data.EntityClient" />
-      <add name="TodolistContext" connectionString="Data Source=(localdb)\v11.0; Initial Catalog=TodolistContext-20140720005228; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|TodolistContext-20140720005228.mdf"
-        providerName="System.Data.SqlClient" />
+      <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-todolist-20140719170201;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-todolist-20140719170201.mdf" providerName="System.Data.SqlClient" />
+      <add name="TodolistEntities" connectionString="metadata=res://*/Models.Todolist.csdl|res://*/Models.Todolist.ssdl|res://*/Models.Todolist.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\v11.0;attachdbfilename=|DataDirectory|\todolist.mdf;integrated security=True;connect timeout=30;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+      <add name="TodolistContext" connectionString="Data Source=(localdb)\v11.0; Initial Catalog=TodolistContext-20140720005228; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|TodolistContext-20140720005228.mdf" providerName="System.Data.SqlClient" />
     </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -29,6 +26,10 @@
       <dependentAssembly>
         <assemblyIdentity name="EntityFramework" publicKeyToken="b77a5c561934e089" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-5.0.0.0" newVersion="5.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-13.0.0.0" newVersion="13.0.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
