--- a/Todolist/Web.config
+++ b/Todolist/Web.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=152368
@@ -9,12 +9,9 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-todolist-20140719170201;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-todolist-20140719170201.mdf"
-      providerName="System.Data.SqlClient" />
-    <add name="TodolistEntities" connectionString="metadata=res://*/Models.Todolist.csdl|res://*/Models.Todolist.ssdl|res://*/Models.Todolist.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\v11.0;attachdbfilename=|DataDirectory|\todolist.mdf;integrated security=True;connect timeout=30;MultipleActiveResultSets=True;App=EntityFramework&quot;"
-      providerName="System.Data.EntityClient" />
-    <add name="TodolistContext" connectionString="Data Source=(localdb)\v11.0; Initial Catalog=TodolistContext-20140720005228; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|TodolistContext-20140720005228.mdf"
-      providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-todolist-20140719170201;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-todolist-20140719170201.mdf" providerName="System.Data.SqlClient" />
+    <add name="TodolistEntities" connectionString="metadata=res://*/Models.Todolist.csdl|res://*/Models.Todolist.ssdl|res://*/Models.Todolist.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\v11.0;attachdbfilename=|DataDirectory|\todolist.mdf;integrated security=True;connect timeout=30;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="TodolistContext" connectionString="Data Source=(localdb)\v11.0; Initial Catalog=TodolistContext-20140720005228; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|TodolistContext-20140720005228.mdf" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
@@ -99,6 +96,10 @@
       <dependentAssembly>
         <assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35" />
         <bindingRedirect oldVersion="0.0.0.0-1.3.0.0" newVersion="1.3.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-13.0.0.0" newVersion="13.0.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
